# Project-Orion

./: .gitignore  CORRECAO_COMPOSE_KOTLIN.md  CORRECAO_PLUGIN_DUPLICADO.md  ERRO_CORRIGIDO.md  MUDANCAS.md  MUDANCAS_IMPLEMENTADAS.md  README.md  README_BUILD.md  build.gradle  git-push.sh  run_upload.py  upload-final.sh  upload2.sh
.gitscout/: COMMIT_EDITMSG  config  index
.gitscout/logs/: HEAD
.gitscout/logs/refs/heads/: master
.gitscout/logs/refs/remotes/pierre/: master
.gitscout/refs/remotes/pierre/: master
.gitscout/refs/tags/: event-init-jam-4182d1aa-1525-4556-8a5a-3329647ccdd4  event-toolu_012q8dFYGoDYz3EcnLmJv8vZ  event-toolu_0157ikmX1xQjhgNu6LcWTz7g  event-toolu_01DwcPbZx4N2p34Asie1kgpk  event-toolu_01LmKMs72fUqMd8fvAM46vYb  event-toolu_01Lr4ScwjpfBR7RcvgKn7Vs3
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: fexcore_env_vars.json
app/src/main/cpp/adrenotools/lib/linkernsbypass/: meson.build
app/src/main/cpp/winlator/: vulkan.c
app/src/main/res/drawable/: icon_file.xml  icon_folder.xml
app/src/main/res/menu/: shortcut_popup_menu.xml
app/src/main/res/values/: arrays.xml  strings.xml
gradle/: libs.versions.toml
java_reference/com/winlator/cmod/: AdrenotoolsFragment.java  ContainerDetailFragment.java  FileManagerFragment.java  InputControlsFragment.java  MainActivity.java  ShortcutsFragment.java  XServerDisplayActivity.java
layout_reference/: container_detail_fragment.xml  file_list_item.xml  file_manager_fragment.xml  graphics_driver_config_dialog.xml  settings_fragment.xml  shortcut_settings_dialog.xml
(+47 files in other folders)
